W03 Project 2 Part 1 completed
